--- a/scss/style.scss
+++ b/scss/style.scss
@@ -115,13 +115,14 @@ body {
 	}
 }
 
-._container {
+[class*="__container"] {
 	max-width: 1128px;
 	padding: 0 15px;
 	margin: 0 auto;
 }
 
 .card-slider {
+	height: 800px;
 	&__wrapper {
 		padding: 0 0 41px 0;
 	}
@@ -289,6 +290,7 @@ body {
 	}
 
 	&__next {
+		border: 1px solid #ff6700;
 		text-align: center;
 		font-family: "Roboto Flex";
 		font-style: normal;
@@ -300,6 +302,7 @@ body {
 		font-stretch: 151%;
 		font-variation-settings: "GRAD" 0, "slnt" 0, "XTRA" 499, "XOPQ" 96, "YOPQ" 79, "YTLC" 514, "YTUC" 712, "YTAS" 750,
 			"YTDE" -203, "YTFI" 738;
+		cursor: pointer;
 		&::before {
 			content: "";
 			width: 12px;
@@ -310,6 +313,15 @@ body {
 			margin: 0 8px 0 0;
 		}
 	}
+	&__pag .swiper-pagination-bullet {
+		width: 10px;
+		height: 10px;
+		background-color: #6a6a6a;
+		border-radius: 50%;
+		font-size: 20px;
+		line-height: 14px;
+	}
+	
 }
 
 @media (max-width: 767px) {
