--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,9 +92,6 @@ h6 {
 
 /*--------------------*/
 
-@import url("https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic");
-@import url("https://fonts.googleapis.com/css?family=Roboto+Flex:regular");
-
 //================================================
 
 body {
@@ -224,10 +221,12 @@ body {
 		&:hover {
 			transform: translate(-3px, -3px);
 			box-shadow: 3px 3px 0 #090909;
+			background: #5337ff;
 		}
 		&:active {
 			transform: translate(0px, 0px);
 			box-shadow: 0px 0px 0 #090909;
+			background: #5337ff;
 		}
 	}
 
@@ -263,10 +262,12 @@ body {
 		&:hover {
 			transform: translate(-3px, -3px);
 			box-shadow: 3px 3px 0 #090909;
+			background: #5337ff;
 		}
 		&:active {
 			transform: translate(0px, 0px);
 			box-shadow: 0px 0px 0 #090909;
+			background: #5337ff;
 		}
 	}
 
@@ -281,7 +282,7 @@ body {
 		font-stretch: 151%;
 		font-variation-settings: "GRAD" 0, "slnt" 0, "XTRA" 499, "XOPQ" 96, "YOPQ" 79, "YTLC" 514, "YTUC" 712, "YTAS" 750,
 			"YTDE" -203, "YTFI" 738;
-		padding: 0 0 20px 0;
+		padding: 0 0 20px 20px;
 	}
 
 	&__prev {
@@ -321,7 +322,6 @@ body {
 		font-size: 20px;
 		line-height: 14px;
 	}
-	
 }
 
 @media (max-width: 767px) {
